# tree-sitter-ilo

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: control-flow.txt  declarations.txt  expressions.txt
