[package]
name = "tree-sitter-ilo"
description = "ilo grammar for tree-sitter"
version = "0.12.0"
authors = ["Dan Morris"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ilo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ilo-lang/ilo-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
